--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/sequelize": "^4.28.13",
     "@types/uuid": "^8.3.4",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "sequelize-cli": "^6.5.2"
   }
 }
